--- a/FuzzyPaws2/Views/Appointment/Index.cshtml
+++ b/FuzzyPaws2/Views/Appointment/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="row pt-4">
         <div class="col-6">
             <h2 class="text-primary"> 
-                Vet Appointments
+                Vet Appointments <i class="fa-solid fa-calendar-check"></i>
                 @if(User.IsInRole("Vet")){
                 <div class="btn-group">
                   <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
@@ -144,3 +144,4 @@
         </tbody>
  }
  </table>
+
