--- a/FuzzyPaws2/Views/Pet/Index.cshtml
+++ b/FuzzyPaws2/Views/Pet/Index.cshtml
@@ -20,7 +20,7 @@
                         asp-controller="Pet" asp-action="Unavailable">Unavailable pets</a></li>
                   </ul>
                 </div>
-                <img src="~/images/cat-icon.png" style="height50px;width:50px"/>
+                <i class="fa-solid fa-cat"></i>
             </h2>    
         </div>
 
@@ -42,7 +42,7 @@
               <div class="form-actions no-color">
                    <p>
                         <input id="search" placeholder="Name..." type="text" name="search" value="@ViewData["CurrentFilter"]" />
-                        <input type="submit" value="Search by name" class="btn btn-primary" /> 
+                        <input type="submit" value="Search by name" class="btn btn-primary" />
                    </p>
               </div>
         </form>
@@ -74,9 +74,9 @@
 <div class="row text-center">
 @foreach(var pet in Model.AllPets)
 {            
-    <div class="card col-4 pt-2 mb-1"> @*my-1 mx-1 me-1 ms-1*@
+    <div class="card col-4 pt-2 mb-1" id="cardradius"> @*my-1 mx-1 me-1 ms-1*@
         <a asp-controller="Pet" asp-action="Details" asp-route-id="@pet.Id">
-            <img class="card-img-top" height="100%" width="100" style="min-height:350px" src="@FileLocation.RetriveFileFromFolder@pet.Image" asp-append-version="true" alt="Card image cap" />  
+            <img id="imglist" class="card-img-top" height="100%" width="100" style="min-height:350px" src="@FileLocation.RetriveFileFromFolder@pet.Image" asp-append-version="true" alt="Card image cap" />  
         </a>
             <div class="card-body">
                 <a asp-controller="Pet" asp-action="Details" asp-route-id="@pet.Id">
@@ -84,11 +84,15 @@
                 </a>
                 @if (pet.IsSold.Equals(true))
                         {
-                            <h6 class="text text-danger">Status: @(pet.IsSold ? "Sold":"Available")</h6>
+                            <h6 class="text text-danger"> 
+                                <i class="fa-solid fa-x"></i>
+                                @(pet.IsSold ? "Sold":"Available")</h6>
                         }
 
                         else{
-                           <h6 class="text text-success">Status: @(pet.IsSold ? "Sold":"Available")</h6>
+                           <h6 class="text text-success">
+                                <i class="fa-solid fa-check"></i>
+                               @(pet.IsSold ? "Sold":"Available")</h6>
 
                         }
                
@@ -106,11 +110,4 @@
     }
  </div>
 
- <style>
-     #search{
-         width:300px;
-         border-radius: 10px;
-         padding: 5px;
-     }
- </style>
                
