--- a/FuzzyPaws2/Views/Home/_DashboardPins.cshtml
+++ b/FuzzyPaws2/Views/Home/_DashboardPins.cshtml
@@ -47,8 +47,9 @@
             <div class="icon">
             <i class="fa fa-user"></i>
             </div>
-            <a href="#" class="small-box-footer">More info <i class="bi bi-arrow-right-circle-fill"></i></a>
-            </div>
+            <p class="small-box-footer">Hello there!</p>
+@*            <a href="#" class="small-box-footer">More info <i class="bi bi-arrow-right-circle-fill"></i></a>
+*@            </div>
             </div>
 
             <div class="col-lg-3 col-6">
