--- a/FuzzyPaws2/Views/MyPet/Index.cshtml
+++ b/FuzzyPaws2/Views/MyPet/Index.cshtml
@@ -4,7 +4,7 @@
     <div class="row pt-4">
         <div class="col-6">
             <h2 class="text-primary"> 
-                MyPets 
+                MyPets <i class="fa-solid fa-frog fa-bounce"></i>
             </h2>
         </div>
         <div class="col-6 text-end">
@@ -34,7 +34,7 @@ else
             <div class="card mb-3 me-2" style="max-width: 500px;">
               <div class="row g-0">
                 <div class="col-md-4">
-                    <img class="card-img-top" height="100%" width="100" src="@FileLocation.RetriveFileFromFolder@pet.Image" asp-append-version="true" alt="Take a picture of your new pet and show it off!" />  
+                    <img class="card-img-top" class="mb-2 mt-1" height="100%" width="100" src="@FileLocation.RetriveFileFromFolder@pet.Image" asp-append-version="true" alt="Take a picture of your new pet and show it off!" />  
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
