--- a/FuzzyPaws2/Views/Shared/_Layout.cshtml
+++ b/FuzzyPaws2/Views/Shared/_Layout.cshtml
@@ -10,12 +10,17 @@
     <link rel="stylesheet" href="~/FuzzyPaws2.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="color:white">FuzzyPaws</a>
+                <a class="navbar-brand" asp-area="" 
+                    asp-controller="Home" asp-action="Index" 
+                    style="color:white">
+                        Fuzzy Paws <i class="fa-solid fa-paw"></i>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -38,9 +43,6 @@
                                     <a class="dropdown-item" asp-controller="PetBreed" asp-action="Index">Breeds</a>
                                 </li>
                             </ul>
-                        <li class="nav-item ms-2">
-                            <a class="nav-link text-light" asp-controller="Product" asp-action="Index">Products</a>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-controller="Appointment" asp-action="Index">Appointments</a>
                         </li>
@@ -78,9 +80,8 @@
                             <li class="nav-item ms-auto">
                                 <a asp-controller="Appointment"
                                    asp-action="Notification">
-                                    <i class="bi bi-bell"
+                                    <i class="fa-solid fa-bell"
                                        style="color:yellow">
-                                        °
 
                                         @*@if(Model.AllAppointments.Where(x => x.status == Status.Waiting)
                                                                      .Count()
